--- a/MS/package.json
+++ b/MS/package.json
@@ -13,6 +13,7 @@
     "@types/leaflet-draw": "^1.0.11",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "framer-motion": "^11.13.1",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-fullscreen": "^1.0.2",
@@ -23,6 +24,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-draw": "^0.20.4",
